2022-03-10  Sihui Liu  <sihui_liu@apple.com>

        Abandoned memory in NetworkStorageManager::m_temporaryBlobPathsByConnection
        https://bugs.webkit.org/show_bug.cgi?id=237734

        Reviewed by Chris Dumez.

        Remove items from m_temporaryBlobPathsByConnection when connection is closed.

        * NetworkProcess/storage/NetworkStorageManager.cpp:
        (WebKit::NetworkStorageManager::stopReceivingMessageFromConnection):

2022-03-10  Chris Dumez  <cdumez@apple.com>

        Fix naming in NetworkProcessProxy::registerRemoteWorkerClientProcess()
        https://bugs.webkit.org/show_bug.cgi?id=237737

        Reviewed by Geoffrey Garen.

        Fix naming in NetworkProcessProxy::registerRemoteWorkerClientProcess() to store referring to
        shared workers and add logging.

        * UIProcess/Network/NetworkProcessProxy.cpp:
        (WebKit::NetworkProcessProxy::registerRemoteWorkerClientProcess):
        (WebKit::NetworkProcessProxy::unregisterRemoteWorkerClientProcess):
        * UIProcess/Network/NetworkProcessProxy.h:
        * UIProcess/Network/NetworkProcessProxy.messages.in:

2022-03-10  Michael Saboff  <msaboff@apple.com>

        Catalyst JavaScriptCore, WebCore, WebKitLegacy, and WebKit shouldn't be copied to the Secondary Path
        https://bugs.webkit.org/show_bug.cgi?id=237748

        Reviewed by Mark Lam.

        Updated the configuration to exclude copying Catalyst build products to the secondary path.

        * Configurations/Base.xcconfig:

2022-03-10  Chris Dumez  <cdumez@apple.com>

        [macOS] WebContent processes crash with XPC_EXIT_REASON_SIGTERM_TIMEOUT when logging out
        https://bugs.webkit.org/show_bug.cgi?id=237398
        <rdar://88940229>

        Reviewed by Alexey Proskuryakov.

        Because we don't use RunningBoard on macOS, we leak an OS transaction to control the lifetime of our XPC