@@ -1,3 +1,15 @@
+2022-03-11  Tim Horton  <timothy_horton@apple.com>
+
+        Disable WebGL and DOM GPU process when some dependencies are unavailable
+        https://bugs.webkit.org/show_bug.cgi?id=237700
+        <rdar://problem/88735051>
+
+        Reviewed by Eric Carlson.
+
+        * Shared/WebPreferencesDefaultValues.cpp:
+        (WebKit::defaultUseGPUProcessForDOMRenderingEnabled):
+        (WebKit::defaultUseGPUProcessForWebGLEnabled):
+
 2022-03-10  Sihui Liu  <sihui_liu@apple.com>
 
         Abandoned memory in NetworkStorageManager::m_temporaryBlobPathsByConnection
